Fixed header, titles, button colors, spacing && more.

--- a/assets/sass/base/_mpel.scss
+++ b/assets/sass/base/_mpel.scss
@@ -1,22 +1,63 @@
 span.medium {
-    font-weight: 600;
+  font-weight: 600;
 }
 
 span.bold {
-    font-weight: 800;
+  font-weight: 800;
 }
 
 span.bolder {
-    font-weight: 900;
+  font-weight: 900;
 }
 
 span.accent {
-    color: _palette(accent);
+  color: _palette(accent);
 }
 
 article {
-    h3 {
-        font-weight: 800;
-        font-size: 1.3em;
+  h3 {
+    font-weight: 800;
+    font-size: 1.3em;
+  }
+}
+/*post modern dynamic yolo styling*/
+section.features {
+  article {
+    background-color: #fff;
+    border: 1px solid _palette(light-gray);
+    transition: box-shadow 300ms cubic-bezier(0.23, 1, 0.32, 1);
+    &:hover {
+      box-shadow: 0 5px 10px _palette(light-gray);
     }
+    h3 {
+      color: _palette(accent);
+      border-bottom: solid 2px rgba(200, 200, 200, 0.2);
+    }
+    p {
+      color: #222;
+    }
+    a.button {
+      background-color: #fff;
+      border: solid 2px _palette(accent);
+      color: _palette(accent) !important;
+      box-shadow: none;
+      &:hover {
+        background-color: _palette(accent);
+        color: white !important;
+      }
+    }
+  }
+}
+section .spotlight {
+    a.button{
+        border: 2px solid white;
+        &:hover {
+            background-color: white !important;
+            color: _palette(accent) !important;
+        }
+    }
+}
+/*utilites*/
+.mr-25 {
+    margin-right: 25px;
 }
