--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -17,7 +17,7 @@
 		top: 0;
 		width: 100%;
 		z-index: _misc(z-index-base);
-
+		box-shadow: 0 5px 8px rgba(200, 200, 200, .2);
 		h1 {
 			@include vendor('transition', (
 				'opacity #{_duration(transition)} ease-in-out',
@@ -25,13 +25,16 @@
 			));
 			color: _palette(dark-gray);
 			border-bottom: 0;
-			font-size: 0.8em;
+			font-size: 1em;
 			margin-bottom: 0;
 			opacity: 1;
 			visibility: visible;
-
+			text-align: center;
 			a {
 				border: 0;
+				&:hover {
+					color: _palette(dark-gray) !important;
+				}
 			}
 		}
 
@@ -60,8 +63,8 @@
 		}
 
 		&.alt {
-			background-color: white;
-
+			background-color: transparent;
+			box-shadow: none;
 			h1 {
 				opacity: 0;
 				visibility: hidden;
